working with interface

--- a/public/index.html
+++ b/public/index.html
@@ -342,12 +342,12 @@
         <!--#Services-->
         <div id="second" class="Parallax">
                     <div class="ParallaxText">
-                <h2>WORD <span>OF</span> THE <span>WISE</span></h2>
+                <h2 style="font-family: 'Open Sans',arial;font-weight: 300">WORD <span>OF</span> THE <span>WISE</span></h2>
                 <div class="clearfix"></div>
-                <blockquote>A man must be big enough to admit his mistakes, smart enough to profit
+                <blockquote style="font-family: 'Open Sans',arial;font-weight: 300">A man must be big enough to admit his mistakes, smart enough to profit
                             from them, and strong enough to correct them.</blockquote>
                 <div class="clearfix"></div>
-                <p>- Stefan Kasililika -</p>
+                <p>Stefan Kasililika -</p>
             </div>
                 </div>
         <!--#second-->
@@ -430,7 +430,7 @@
         <div id="third" class="Parallax">
                     <div class="container clearfix TitleSection">
                 <header class="page-head">
-                            <h1>Our Clients </h1>
+                            <h1 style="font-family: 'Open Sans',arial;font-weight: 300">Our Clients </h1>
                         </header>
                 <div class="row-fluid">
                             <div class="span12"> 
@@ -478,7 +478,7 @@
                     <div class="container-fluid clearfix LargeSlider">
                 <div class="container clearfix TitleSection">
                             <header class="page-head">
-                        <h1>Gallery <small>// Enjoy our works</small></h1>
+                        <h1 style="font-family: 'Open Sans',arial;font-weight: 300">Gallery <small style="font-family: 'Open Sans',arial;font-weight: 300">// Enjoy our works</small></h1>
                     </header>
                         </div>
                 <div class="container clearfix">
@@ -531,7 +531,7 @@
         <div id="fourth" class="Parallax">
                     <div class="container clearfix TitleSection">
                 <header class="page-head">
-                            <h1>Twitter Feeds </h1>
+                            <h1 style="font-family: 'Open Sans',arial;font-weight: 300">Twitter Feeds </h1>
                         </header>
                 <div id="ticker" class="query span8"></div>
             </div>
@@ -541,13 +541,13 @@
                     <div class="container-fluid clearfix Contact">
                 <div class="container clearfix TitleSection">
                             <header class="page-head">
-                        <h1>CONTACT Us <small>// LET'S HAVE A DISCUSSION</small></h1>
+                        <h1 style="font-family: 'Open Sans',arial;font-weight: 300">CONTACT Us <small style="font-family: 'Open Sans',arial;font-weight: 300">// LET'S HAVE A DISCUSSION</small></h1>
                     </header>
                         </div>
                 <div class="container clearfix">
                             <div class="container">
                         <div class="span6">
-                                    <h2>Get In Touch With Us</h2>
+                                    <h2 style="font-family: 'Open Sans',arial;font-weight: 300">Get In Touch With Us</h2>
                                     <div class="well GetInTouch">
                                 <form class="form-horizontal"
                                         id="registerHere" method='post' action='MAILTO:someone@example.com'>
@@ -587,16 +587,16 @@
                             </div>
                                 </div>
                         <div class="span6">
-                                    <h2>Contact Info</h2>
+                                    <h2 style="font-family: 'Open Sans',arial;font-weight: 300">Contact Info</h2>
                                     <div class="well" style="padding-bottom:81px;">
                                 <div class="span12">
-                                            <p style="margin:20px;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                                            <p style="margin:20px;font-family: 'Open Sans',arial;font-weight: 300"">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
                                         ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
                                         dis parturient montes. <img src="images/contact.jpg" alt="contact img" style="margin:30px 0;border: 3px solid #F96E5B;"> </p>
                                         </div>
                                 <hr>
                                 <div class="contact-info">
-                                    <ul>
+                                    <ul style="font-family: 'Open Sans',arial;font-weight: 300">
                                         <li> <i class="icon-globe"></i>Dotphics</li>
                                         <li> <i class="icon-bullhorn"></i>+255714881391</li>
                                         <li> <i class="icon-envelope"></i> <a href="www.dotphics">info@dotphics.com</a> </li>
@@ -620,12 +620,12 @@
         <!--#Contact-->
         <div id="fifth" class="Parallax">
                     <div class="ParallaxText">
-                <h2>WORD <span>OF</span> THE <span>WISE</span></h2>
+                <h2 style="font-family: 'Open Sans',arial;font-weight: 300">WORD <span>OF</span> THE <span>WISE</span></h2>
                 <div class="clearfix"></div>
-                <blockquote>A man must be big enough to admit his mistakes, smart enough to profit
+                <blockquote style="font-family: 'Open Sans',arial;font-weight: 300">A man must be big enough to admit his mistakes, smart enough to profit
                             from them, and strong enough to correct them.</blockquote>
                 <div class="clearfix"></div>
-                <p>- Stefan Kasililika  -</p>
+                <p style="font-family: 'Open Sans',arial;font-weight: 300">- Stefan Kasililika  -</p>
             </div>
                 </div>
         <!--#fifth-->
@@ -641,8 +641,8 @@
                        <li> <a class="Instagram" rel="tooltip" href="index.html#" data-original-title="Instagram">Instagram</a> </li>
                        </ul>
 
-                    <a class="brand" href="index.html#welcome" style="font-size:40px"><strong style="color: #C13136">Dot</strong><strong style="color: #000000">phics</strong></a>
-                     <p>All rights reserved.  &copy; <a href=" ">Dotphics</a> </p>
+                    <a class="brand" href="index.html#welcome" style="font-size:40px"><strong style="color: #C13136;font-family: 'Open Sans',arial;font-weight: 300"">Dot</strong><strong style="color: #000000">phics</strong></a>
+                     <p>All rights reserved.  &copy; <a href=" " style="font-family: 'Open Sans',arial;font-weight: 300">Dotphics</a> </p>
                         </footer>
             </div>
                 </div>
