--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
                 <div class="container clearfix">
                             <div class="container clearfix TitleSection">
                         <header class="page-head">
-                                    <h1 style="font-family: 'Open Sans',arial;font-weight: 300">About Us <small style="font-family: 'Open Sans',arial;font-weight: 300">// AND WHAT MAKES US UNIQUE</small></h1>
+                                    <h1 style="font-family: 'Open Sans',arial;font-weight: 300">About Us <small style="font-family: 'Open Sans',arial;font-weight: 300;text-transform: lowercase">// AND WHAT MAKES US UNIQUE</small></h1>
                                 </header>
                     </div>
                             <div class="container clearfix">
@@ -223,7 +223,7 @@
                                                 </div>
                                     </div>
                                             <h2 style="font-family: 'Open Sans',arial;font-weight: 200;font-size: 25px">Stefan Kasililika</h2>
-                                            <h3 style="font-family: 'Open Sans',arial;font-weight: 200;font-size: 23px">Graphics Designer</h3>
+                                            <h3 style="font-family: 'Open Sans',arial;font-weight: 200;font-size: 25px">Graphics Designer</h3>
                                     <p style="font-family: 'Open Sans',arial;font-weight: 300">Amani Yunge is a Creative Director at Dotphics.
                                         He holds Bachelor of Science in Computer Science of University of Dar es salaam.
                                         He enjoys writing, and spends time daily writing a blog, Google docs.
@@ -289,20 +289,20 @@
                             <div class="row-fluid">
                         <ul id="sti-menu" class="sti-menu clearfix">
                                     <li class="span3 clearfix" data-hovercolor="#49110D"> <a href="index.html#">
-                                        <h2 data-type="mText" class="sti-item">System Development</h2>
-                                        <h3 data-type="sText" class="sti-item">Advanced use of technology</h3>
+                                        <h2 data-type="mText" class="sti-item" style="font-family: 'Open Sans',arial;font-weight: 300">System Development</h2>
+                                        <h3 data-type="sText" class="sti-item" style="font-family: 'Open Sans',arial;font-weight: 300">Advanced use of technology</h3>
                                         <span data-type="icon" class="sti-icon sti-icon-care sti-item"></span> </a> </li>
                                     <li class="span3 clearfix" data-hovercolor="#49110D"> <a href="index.html#">
-                                        <h2 data-type="mText" class="sti-item">Website Design</h2>
-                                        <h3 data-type="sText" class="sti-item">Understanding visually</h3>
+                                        <h2 data-type="mText" class="sti-item" style="font-family: 'Open Sans',arial;font-weight: 300">Website Design</h2>
+                                        <h3 data-type="sText" class="sti-item" style="font-family: 'Open Sans',arial;font-weight: 300">Understanding visually</h3>
                                         <span data-type="icon" class="sti-icon sti-icon-alternative sti-item"></span> </a> </li>
                                     <li class="span3 clearfix" data-hovercolor="#49110D"> <a href="index.html#">
-                                        <h2 data-type="mText" class="sti-item">Graphics Design</h2>
-                                        <h3 data-type="sText" class="sti-item">Personalized to your needs</h3>
+                                        <h2 data-type="mText" class="sti-item" style="font-family: 'Open Sans',arial;font-weight: 300">Graphics Design</h2>
+                                        <h3 data-type="sText" class="sti-item" style="font-family: 'Open Sans',arial;font-weight: 300">Personalized to your needs</h3>
                                         <span data-type="icon" class="sti-icon sti-icon-info sti-item"></span> </a> </li>
                                     <li class="span3 clearfix" data-hovercolor="#49110D"> <a href="index.html#">
-                                        <h2 data-type="mText" class="sti-item">Photography</h2>
-                                        <h3 data-type="sText" class="sti-item">Professionals in action</h3>
+                                        <h2 data-type="mText" class="sti-item" style="font-family: 'Open Sans',arial;font-weight: 300">Photography</h2>
+                                        <h3 data-type="sText" class="sti-item" style="font-family: 'Open Sans',arial;font-weight: 300">Professionals in action</h3>
                                         <span data-type="icon" class="sti-icon sti-icon-family sti-item"></span> </a> </li>
                                      </ul>
                     </div>
@@ -541,7 +541,7 @@
                     <div class="container-fluid clearfix Contact">
                 <div class="container clearfix TitleSection">
                             <header class="page-head">
-                        <h1 style="font-family: 'Open Sans',arial;font-weight: 300">CONTACT Us <small style="font-family: 'Open Sans',arial;font-weight: 300">// LET'S HAVE A DISCUSSION</small></h1>
+                        <h1 style="font-family: 'Open Sans',arial;font-weight: 300;color: #000000">CONTACT Us <small style="font-family: 'Open Sans',arial;font-weight: 300;color: #C13136">// LET'S HAVE A DISCUSSION</small></h1>
                     </header>
                         </div>
                 <div class="container clearfix">
