--- a/public/index.html
+++ b/public/index.html
@@ -600,9 +600,9 @@
                                         <li> <i class="icon-globe"></i>Dotphics</li>
                                         <li> <i class="icon-bullhorn"></i>+255714881391</li>
                                         <li> <i class="icon-envelope"></i> <a href="www.dotphics">info@dotphics.com</a> </li>
-                                        <li> <i class="icon-map-marker"></i>Dotphic
+                                        <li> <i class="icon-map-marker"></i>Dotphics
                                             Ubungo DSM.</li>
-                                    </ul
+                                    </ul>
                                         </div>
                             </div>
                                 </div>
@@ -641,7 +641,7 @@
                        <li> <a class="Instagram" rel="tooltip" href="index.html#" data-original-title="Instagram">Instagram</a> </li>
                        </ul>
 
-                    <a class="brand" href="index.html#welcome" style="font-size:40px"><strong style="color: #C13136;font-family: 'Open Sans',arial;font-weight: 300"">Dot</strong><strong style="color: #000000">phics</strong></a>
+                    <a class="brand" href="index.html#welcome" style="font-size:40px"><strong style="color: #C13136;font-family: 'Open Sans',arial;font-weight: 300">Dot</strong><strong style="color: #000000;font-family: 'Open Sans',arial;font-weight: 300">phics</strong></a>
                      <p>All rights reserved.  &copy; <a href=" " style="font-family: 'Open Sans',arial;font-weight: 300">Dotphics</a> </p>
                         </footer>
             </div>
