--- a/public/index.html
+++ b/public/index.html
@@ -94,26 +94,26 @@
                             <p>“If there's one thing you learn by working on a lot of different Web sites,
                                 it's that almost any design..."</p>
 
-                            <div class="da-img"><img src="images/parallax_slider/2.jpg" alt="image01" /></div>
+                            <div class="da-img"><img src="images/parallax_slider/2.png" alt="image01" /></div>
                         </div>
                         <div class="da-slide">
                             <h2 style="color: #C13136">System Development</h2>
                             <p>"... the designer of a new system must not only be the implementer and the first large-scale user... "</p>
 
-                            <div class="da-img"><img src="images/parallax_slider/3.jpg" alt="image01" /></div>
+                            <div class="da-img"><img src="images/parallax_slider/3.png" alt="image01" /></div>
                         </div>
 
                         <div class="da-slide">
                             <h2 style="color: #87ceeb">Graphics Design</h2>
                             <p>"Graphic Designing is a way of feeling, of touching, of loving. What you have caught on mind is captured..."</p>
 
-                            <div class="da-img"><img src="images/parallax_slider/1.jpg" alt="image01" /></div>
+                            <div class="da-img"><img src="images/parallax_slider/1.png" alt="image01" /></div>
                         </div>
                         <div class="da-slide">
                             <h2 style="color: #000000">Photography</h2>
                             <p>“You don't make a photograph just with a camera. You bring to the act of photography all the pictures you have seen..."</p>
 
-                            <div class="da-img"><img src="images/parallax_slider/4.jpg" alt="image01" /></div>
+                            <div class="da-img"><img src="images/parallax_slider/4.png" alt="image01" /></div>
                         </div>
                         <nav class="da-arrows"> <span class="da-arrows-prev"></span> <span class="da-arrows-next"></span> </nav>
                     </div>
@@ -264,13 +264,10 @@
         <!--#About-->
         <div id="intro" class="Parallax">
                     <div class="ParallaxText">
-                <h2 style="font-family: 'Open Sans',arial;font-weight: 300">WORD <span>OF</span> THE <span>WISE</span></h2>
+                <h2><strong  style="font-family: 'Open Sans',arial;font-weight: 300">Website & System </strong><strong  style="font-family: 'Open Sans',arial;font-weight: 300;color: #C13136">Development</strong></h2>
                 <div class="clearfix"></div>
-                <blockquote style="font-family: 'Open Sans',arial;font-weight: 300">A man must be big enough to admit his mistakes, smart enough to profit
-                            from them, and strong enough to correct them.</blockquote>
-                <div class="clearfix"></div>
-                <p>- Stefan Kasililika -</p>
-            </div>
+                <blockquote style="font-family: 'Open Sans',arial;font-weight: 300">We build <strong style="color: #C13136">Websites & Management Systems</strong> that will build your <strong style="color: #C13136">Bussiness</strong></blockquote>
+                </div>
                 </div>
         <!--#intro-->
         <div id="Services">
@@ -342,12 +339,10 @@
         <!--#Services-->
         <div id="second" class="Parallax">
                     <div class="ParallaxText">
-                <h2 style="font-family: 'Open Sans',arial;font-weight: 300">WORD <span>OF</span> THE <span>WISE</span></h2>
+                        <h2><strong  style="font-family: 'Open Sans',arial;font-weight: 300">Graphics</strong><strong  style="font-family: 'Open Sans',arial;font-weight: 300;color: #C13136">Design</strong></h2>
                 <div class="clearfix"></div>
-                <blockquote style="font-family: 'Open Sans',arial;font-weight: 300">A man must be big enough to admit his mistakes, smart enough to profit
-                            from them, and strong enough to correct them.</blockquote>
+                <blockquote style="font-family: 'Open Sans',arial;font-weight: 300"> a way of feeling, of touching, of loving. What you have caught on mind is captured...</blockquote>
                 <div class="clearfix"></div>
-                <p>Stefan Kasililika -</p>
             </div>
                 </div>
         <!--#second-->
@@ -590,9 +585,9 @@
                                     <h2 style="font-family: 'Open Sans',arial;font-weight: 300">Contact Info</h2>
                                     <div class="well" style="padding-bottom:81px;">
                                 <div class="span12">
-                                            <p style="margin:20px;font-family: 'Open Sans',arial;font-weight: 300"">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-                                        ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
-                                        dis parturient montes. <img src="images/contact.jpg" alt="contact img" style="margin:30px 0;border: 3px solid #F96E5B;"> </p>
+                                            <p style="margin:20px;font-family: 'Open Sans',arial;font-weight: 300">Drop everything (carefully) and walk away.
+                                                Don’t worry about people trying to stop you.<br>
+                                                You’re on the best track to the best solution of your need. <img src="images/contact.jpg" alt="contact img" style="margin:30px 0;border: 3px solid #F96E5B;"> </p>
                                         </div>
                                 <hr>
                                 <div class="contact-info">
