--- a/public/index.html
+++ b/public/index.html
@@ -532,11 +532,11 @@
             </div>
                 </div>
         <!--#fourth-->
-        <div id="Contact">
+        <div id="fifth">
                     <div class="container-fluid clearfix Contact">
                 <div class="container clearfix TitleSection">
                             <header class="page-head">
-                        <h1 style="font-family: 'Open Sans',arial;font-weight: 300;color: #000000">CONTACT Us <small style="font-family: 'Open Sans',arial;font-weight: 300;color: #C13136">// LET'S HAVE A DISCUSSION</small></h1>
+                        <h1 style="font-family: 'Open Sans',arial;font-weight: 300;color: #000000">CONTACT Us <small style="font-family: 'Open Sans',arial;font-weight: 300;text-transform: lowercase">// LET'S HAVE A DISCUSSION</small></h1>
                     </header>
                         </div>
                 <div class="container clearfix">
@@ -615,12 +615,11 @@
         <!--#Contact-->
         <div id="fifth" class="Parallax">
                     <div class="ParallaxText">
-                <h2 style="font-family: 'Open Sans',arial;font-weight: 300">WORD <span>OF</span> THE <span>WISE</span></h2>
+                <h2 style="font-family: 'Open Sans',arial;font-weight: 300">Photography</h2>
                 <div class="clearfix"></div>
                 <blockquote style="font-family: 'Open Sans',arial;font-weight: 300">A man must be big enough to admit his mistakes, smart enough to profit
                             from them, and strong enough to correct them.</blockquote>
                 <div class="clearfix"></div>
-                <p style="font-family: 'Open Sans',arial;font-weight: 300">- Stefan Kasililika  -</p>
             </div>
                 </div>
         <!--#fifth-->
